--- a/Kn01/Kn01.md
+++ b/Kn01/Kn01.md
@@ -1,3 +1,16 @@
 # Kn01
 
-## Ram
+### Weniger CPUs als das Host-System
+![Weniger CPUs](Imgs/Kn01_1.png)
+
+### Mehr CPUs als das Host-System
+![Mehr CPUs](Imgs/Kn01_2.png)
+
+### Weniger RAM als das Host-System
+![Weniger RAM](Imgs/Kn01_3.png)
+
+### Mehr RAM als das Host-System
+![Mehr RAM](Imgs/Kn01_4.png)
+
+### Weshalb tretten solche Fehler auf?
+VMware Workstation Player 17 ermöglicht das Ausführen mehrerer Betriebssysteme auf einem einzelnen Host-System durch Virtualisierung. Dabei teilen sich die virtuellen Maschinen die verfügbaren Ressourcen wie RAM und Prozessoren mit dem Host-System. Die Menge an RAM und Prozessoren, die den virtuellen Maschinen zugewiesen werden können, ist durch die physischen Ressourcen des Host-Systems begrenzt. Überbeanspruchung kann zu Leistungsproblemen führen. Es ist wichtig, die Ressourcenzuweisungen im Einklang mit den Host-Systemkapazitäten zu halten, da das Betriebssystem des Hosts die Verteilung überwacht, um optimale Leistung sicherzustellen. Es ist nicht möglich, den virtuellen Maschinen mehr Ressourcen zuzuweisen, als das Host-System bereitstellen kann.
